<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="#F2F2F2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/options"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_shape_wihte_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/options_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/options_ip_value"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_shape_input"
                android:lines="1"
                android:padding="1dp"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_shape_wihte_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/options_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/options_port_value"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_shape_input"
                android:lines="1"
                android:padding="1dp"
                android:ems="10"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_shape_wihte_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/options_dns1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dns1"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/options_dns1_value"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_shape_input"
                android:lines="1"
                android:padding="1dp"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_shape_wihte_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/options_dns2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dns2"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#EEEFFF" />

            <EditText
                android:id="@+id/options_dns2_value"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_shape_input"
                android:lines="1"
                android:padding="1dp"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:orientation="horizontal">

            <Button
                android:id="@+id/options_save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/ic_button_default"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:text="@string/apply" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>